tests/NormalTests/paczka1/small_fuzzy/69209242.err
Error in line 5: Uk9 A633 96,2
Error in line 6: S363 A633 73,0
Error in line 4: gfN S188 41,5
